fixed GUI, added tests, cleaned code